<resources>
    <string name="v_tag_complete" translatable="false">tagCompleteView</string>
    <string name="v_tag_error" translatable="false">tagErrorView</string>
    <string name="v_tag_loading_overlay" translatable="false">tagLoadingOverlayView</string>
    <string name="v_tag_loading" translatable="false">tagLoadingView</string>
    <string name="v_tag_loading_default" translatable="false">tagLoadingDefaultView</string>
    <string name="v_tag_empty" translatable="false">tagEmptyView</string>
    <string name="default_notification_channel_id" translatable="false">cab9DefaultNotificationChannelId</string>
    <string name="default_notification_channel_name">Updates &amp; Notices</string>
    <string name="default_notification_channel_desc">Handles all other incoming notifications.</string>
    <string name="booking_offer_channel_id" translatable="false">booking_offer_alerts</string>
    <string name="booking_offer_channel_desc">Handles all incoming booking offer notifications.</string>
    <string name="booking_offer_channel_name">Booking Offers</string>
    <string name="tracking_location_channel_id" translatable="false">cab9_location_service</string>
    <string name="tracking_location_channel_desc">Used to notify when app is using your location and running.</string>
    <string name="tracking_location_channel_name">Driver Tracking</string>
    <string name="booking_cancel_channel_id" translatable="false">booking_cancel_alerts</string>
    <string name="booking_cancel_channel_desc">Handles all cancel booking notifications.</string>
    <string name="booking_cancel_channel_name">Cancel Bookings</string>
    <string name="new_bidding_channel_id" translatable="false">new_job_bid_alerts</string>
    <string name="new_bidding_channel_desc">Handles all new job bidding notifications.</string>
    <string name="new_bidding_channel_name">New Bids</string>
    <string name="tracking">Tracking</string>
    <string name="action_settings">Settings</string>
    <string name="action_fix_now">Fix Now</string>
    <string name="action_retry">Retry</string>
    <string name="action_flag_down">Flag Down</string>
    <string name="action_start">Start</string>
    <string name="action_submit">Submit</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_tnc"><![CDATA[Terms & Conditions]]></string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Signup Now</string>
    <string name="action_start_ride">Start Ride</string>
    <string name="action_add_expense">Add Expense</string>
    <string name="action_request_payment">Request Payment</string>
    <string name="action_select_date">Select date</string>
    <string name="action_accept_booking">Accept Booking</string>
    <string name="action_bid_for_booking">Bid for this booking</string>
    <string name="action_accept">Accept</string>
    <string name="action_archive">Archive</string>
    <string name="action_view_pdf">View PDF</string>
    <string name="action_add_signature">Add Signature</string>
    <string name="action_acknowledge">Acknowledge</string>
    <string name="action_edit">Edit</string>
    <string name="action_change">Change</string>
    <string name="action_i_agree">I Agree</string>
    <string name="action_save">Save</string>
    <string name="action_location_settings">Location Settings</string>
    <string name="action_reject">Reject</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_continue">Continue</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_save_password">Save Password</string>
    <string name="action_close">Close</string>
    <string name="action_start_ride_later">Start ride later</string>
    <string name="action_apply">Apply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_chat">Chat</string>
    <string name="action_asap">Asap</string>
    <string name="action_allow">Allow</string>
    <string name="action_sent">Sent</string>
    <string name="action_deny">Deny</string>
    <string name="action_restart">Restart</string>
    <string name="action_reload">Reload</string>
    <string name="action_add">Add</string>
    <string name="title_alert">Alert</string>
    <string name="title_error">Error</string>
    <string name="title_image_chooser">Image Chooser</string>
    <string name="title_file_chooser">File Chooser</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_chat">Chat</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_bids">Job Pool</string>
    <string name="title_history">History</string>
    <string name="title_payments">Payments</string>
    <string name="title_payment_summary">Summary</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_display">Display</string>
    <string name="title_profile">Profile</string>
    <string name="title_menu">Menu</string>
    <string name="title_personal_info">Personal Info</string>
    <string name="title_account_info">Account Info</string>
    <string name="title_payment_cards">Payment Cards</string>
    <string name="title_payment_add_card">Add Payment Card</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_bank_info">Bank Info</string>
    <string name="title_tags">Tags</string>
    <string name="title_add_expense">Add Expense</string>
    <string name="title_activity_flag_down">Enter Location</string>
    <string name="title_booking_alert">Booking Alert</string>
    <string name="title_biometric">Biometric</string>
    <string name="title_notification">Notification</string>
    <string name="title_notification_settings">Notification Settings</string>
    <string name="title_app_diagnostics">App Diagnostics</string>
    <string name="permission_title_gps">Enable GPS</string>
    <string name="permission_title_location">Enable Geolocation</string>
    <string name="permission_title_notification">Enable Notifications</string>
    <string name="permission_title_battery">Enable Battery Optimization</string>
    <string name="permission_title_overlay">Enable Draw Overlay</string>
    <string name="permission_title_audio">Enable Microphone</string>
    <string name="permission_summary_location">By allowing geolocation we track you through your job and assign booking nearer to you.</string>
    <string name="permission_summary_notification">Enable notifications so that you don\'t miss any booking offers near you.</string>
    <string name="permission_summary_battery">Enable Battery Optimization</string>
    <string name="permission_summary_overlay">Enable Draw Overlay</string>
    <string name="permission_summary_audio">Enable Microphone</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_payments">Payments</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_display">Display</string>
    <string name="menu_item_vehicles">Vehicles</string>
    <string name="menu_item_biometric">Biometric</string>
    <string name="menu_item_navigation">Navigation</string>
    <string name="menu_item_test_notification">Test Notification</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_diagnostics">Diagnostics</string>
    <string name="payment_mode_on_account">OnAccount</string>
    <string name="payment_mode_cash_booking">Cash Booking</string>
    <string name="payment_mode_card_booking">Card Booking</string>
    <string name="payment_mode_in_car">In-Car Payment</string>
    <string name="payment_mode_other">Other</string>
    <string name="display_mode_auto">Automatic</string>
    <string name="display_mode_light">Light Mode</string>
    <string name="display_mode_dark">Dark Mode</string>
    <string name="display_mode_auto_summary">Display mode will automatically change as per system preference</string>
    <string name="display_mode_light_summary">Display preferred during day time</string>
    <string name="display_mode_dark_summary">Display preferred during night time, battery friendly</string>
    <string name="dialog_title_select_date">Select date</string>
    <string name="dialog_title_ack_booking">Please Confirm</string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_location_access">Location Access</string>
    <string name="dialog_msg_booking_allocated">Booking allocated</string>
    <string name="dialog_title_update_not_allowed">Update Not Allowed</string>
    <string name="dialog_title_vehicle_update_confirm">You want to update the vehicle?</string>
    <string name="dialog_title_update_email">Update Email</string>
    <string name="dialog_title_bid_cancelled">Bid Cancelled!</string>
    <string name="dialog_title_no_internet">No Internet?</string>
    <string name="dialog_title_out_of_sync">Sync app state</string>
    <string name="dialog_msg_ack_booking">On clicking this button, you are acknowledging the job.</string>
    <string name="dialog_msg_start_as_directed_booking">You want to start an <b>As Directed</b> booking.</string>
    <string name="dialog_msg_start_flag_down_booking">You want to start a booking.</string>
    <string name="dialog_msg_start_ride">This booking will be marked <b>EnRoute</b></string>
    <string name="dialog_msg_unsupported_web_message">This version of WebView does not support Cab9Go feature. Please update current WebView framework from PlayStore.</string>
    <string name="dialog_msg_location_access">We collect your location in foreground and background to track you and provide the nearest booking as per your location. Please tap on I agree to continue.</string>
    <string name="dialog_title_shift_end_time">Estimated Shift End Time</string>
    <string name="dialog_subtitle_shift_time_end">Please enter an estimated shift end time which will be used for planning and dispatching bookings.</string>
    <string name="dialog_msg_job_cancelled">Job you are currently viewing is cancelled. Please go back and view new bids.</string>
    <string name="dialog_msg_accept_bid">By clicking on Confirm button, you are accepting the bidding.</string>
    <string name="err_no_data">No data found</string>
    <string name="don_t_worry">Don\'t worry,</string>
    <string name="hint_username">Username</string>
    <string name="label_cars">Cars</string>
    <string name="label_area">Area</string>
    <string name="label_customer_signature">Customer Signature</string>
    <string name="label_distance">Distance</string>
    <string name="label_shift_end">Shift End</string>
    <string name="label_sign_here">Please sign here</string>
    <string name="label_add_quick_message">Add Message</string>
    <string name="no_bookings">No Bookings</string>
    <string name="msg_no_history_bookings">No history bookings found at this moment</string>
    <string name="msg_empty_upcoming_bookings">No upcoming bookings allocated at this moment</string>
    <string name="msg_forgot_password">Please enter your username and we will send a link to you</string>
    <string name="msg_reset_password">You can reset your password by clicking on the link</string>
    <string name="msg_terms_of_signature">By signing above you agree to our all ride charges and terms and conditions.</string>
    <string name="hint_type_quick_message">Enter your message</string>
</resources>