<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_upcoming_bookings"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/nav_job_pool_bids"
        android:icon="@drawable/ic_job_pool"
        android:title="@string/title_bids" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_driver_chat"
        android:title="@string/title_chat" />

</menu>