<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_margin">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/label_customer_signature"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/text_size_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear_signature"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_clear" />

        <com.cab9.driver.widgets.signature.SignatureView
            android:id="@+id/signatureView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            app:backgroundColor="@android:color/transparent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/common_margin"
            android:background="@color/bg_tint_divider" />

        <TextView
            android:id="@+id/lbl_sign_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/label_sign_here"
            android:textColor="@color/text_color_1" />

        <TextView
            android:id="@+id/lbl_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_view_padding"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:text="@string/msg_terms_of_signature"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_signature"
                style="@style/Widget.Cab9Driver.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginEnd="@dimen/common_margin_half"
                android:layout_weight="1"
                android:text="@string/action_cancel"
                app:cornerRadius="@dimen/corner_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_signature"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="@dimen/common_margin_half"
                android:layout_weight="1"
                android:text="@string/action_save"
                app:cornerRadius="@dimen/corner_radius" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pBar_signature_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>