<?xml version="1.0" encoding="utf-8"?>
<com.cab9.driver.widgets.ReactiveLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="@string/v_tag_complete">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_forgot_password_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin"
            android:text="@string/don_t_worry"
            android:textAppearance="@style/TextAppearance.Cab9Driver.TitleLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_forgot_password_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_summary_top_margin"
            android:text="@string/msg_forgot_password"
            android:textAppearance="@style/SFProRegularFontStyle"
            android:textColor="@color/text_color_2"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_forgot_password_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_forgot_pwd_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            app:boxStrokeColor="@color/color_box_outline"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_color_3"
            app:layout_constraintTop_toBottomOf="@id/lbl_forgot_password_summary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_forgot_pwd_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:nextFocusForward="@id/txt_login_password"
                android:textAppearance="@style/TextAppearance.Cab9Driver.Login"
                android:textColor="@color/text_color_1"
                android:textColorHint="@color/text_color_3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_forgot_password_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin_half"
            android:gravity="center"
            android:text="@string/msg_reset_password"
            android:textColor="@color/text_color_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_forgot_pwd_username" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin"
            android:text="@string/action_submit"
            android:textSize="@dimen/text_size_vlarge"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.cab9.driver.widgets.ReactiveLayout>
