<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/common_margin"
    android:paddingTop="@dimen/common_margin">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/dialog_title_shift_end_time"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/dialog_subtitle_shift_time_end"
        android:textColor="@color/text_color_2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_half">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_view_padding">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_shift_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/label_shift_end"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/text_size_regular"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                android:id="@+id/dateTimePicker"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_shift_end"
                app:picker_curved="true"
                app:picker_cyclic="true"
                app:picker_selectedTextColor="@color/shift_end_time_selected_text_color"
                app:picker_textSize="20sp"
                app:picker_visibleItemCount="7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelShiftEndTime"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            android:textColor="@color/text_color_2"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitShiftEndTime"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_submit" />

    </LinearLayout>

</LinearLayout>